<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@drawable/sky_background">
	<!-- Everything is in a single RelativeLayout for easy exit animation -->
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:id="@+id/tutorial_frame">
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
		   	<LinearLayout
		   	    android:id="@+id/tutorial_page_1"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="vertical"
			    android:weightSum="1" >
			    	<ImageView 
			    	    android:layout_width="fill_parent"
			    	    android:layout_height="0dp"
			    	    android:layout_weight="0.3"
			    	    android:src="@drawable/tutorial_label"/>
			    	<TextView
					    style="@style/TutorialFont"
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.7"
					    android:text="@string/tutorial_page_1"/>    
			</LinearLayout>
		   	<LinearLayout
		   	    android:id="@+id/tutorial_page_2"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="vertical"
			    android:weightSum="1"
			    android:visibility="invisible" >
			   		<View
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.2"/>
			    	<TextView
					    style="@style/TutorialFont"
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.8"
					    android:text="@string/tutorial_page_2"/> 
			</LinearLayout>
		   	<LinearLayout
		   	    android:id="@+id/tutorial_page_3"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="vertical"
			    android:visibility="invisible"
			    android:weightSum="1" >
			    	<View
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.1"/>   
			   		<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="0dp"
						android:layout_weight="0.9"
						android:orientation="horizontal"
						android:weightSum="1">
				    	<TextView
						    style="@style/TutorialFont"
							android:layout_height="fill_parent"
							android:layout_width="0dp"
							android:layout_weight="0.85"
						    android:text="@string/tutorial_page_3"/>
	   			   		<ImageView
						    android:layout_height="100dp"
						    android:layout_width="0dp"
						    android:layout_weight="0.15"
						    android:paddingRight="5dp"
						    android:src="@drawable/colour_wheel_target_red"/>		   		    
			   		</LinearLayout> 
			</LinearLayout>
		   	<LinearLayout
		   	    android:id="@+id/tutorial_page_4"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:background="@drawable/tutorial_combo_examples"
			    android:orientation="vertical"
			    android:visibility="invisible" >
			    	<TextView
					    style="@style/TutorialFont"
					    android:layout_width="fill_parent"
					    android:layout_height="fill_parent"
					    android:text="@string/tutorial_page_4"/>
			</LinearLayout>
		   	<LinearLayout
		   	    android:id="@+id/tutorial_page_5"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="vertical"
			    android:weightSum="1"
			    android:visibility="invisible" >
			   		<View
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.25"/>
			    	<TextView
					    style="@style/TutorialFont"
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.75"
					    android:text="@string/tutorial_page_5"/>    
			</LinearLayout>
		   	<LinearLayout
		   	    android:id="@+id/tutorial_page_6"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:background="@drawable/tutorial_mode_buttons"
			    android:orientation="vertical"
			    android:weightSum="1"
			    android:visibility="invisible" >
			   		<View
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.1"/>
			    	<TextView
					    style="@style/TutorialFont"
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.9"
					    android:text="@string/tutorial_page_6"/>
			</LinearLayout>
			<!--  -->
		   	<LinearLayout
		   	    android:id="@+id/tutorial_page_7"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:background="@drawable/tutorial_snow"
			    android:orientation="vertical"
			    android:weightSum="1"
			    android:visibility="invisible" >
			    	<TextView
					    style="@style/TutorialFont"
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.3"
					    android:text="@string/tutorial_page_7"
					    android:background="#DD000000"/>
			   		<View
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.7"/>    
			</LinearLayout>
		   	<LinearLayout
		   	    android:id="@+id/tutorial_page_8"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:background="@drawable/tutorial_sun"
			    android:orientation="vertical"
			    android:weightSum="1"
			    android:visibility="invisible">
			    	<TextView
					    style="@style/TutorialFont"
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.25"
					    android:text="@string/tutorial_page_8"
					    android:background="#DD000000"/>
			   		<View
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.75"/>    
			</LinearLayout>
		   	<LinearLayout
		   	    android:id="@+id/tutorial_page_9"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:background="@drawable/tutorial_fog"
			    android:orientation="vertical"
			    android:weightSum="1"
			    android:visibility="invisible" >
			    	<TextView
					    style="@style/TutorialFont"
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.3"
					    android:text="@string/tutorial_page_9"
					    android:background="#DD000000"/>
			   		<View
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.7"/>    
			</LinearLayout>
		   	<LinearLayout
		   	    android:id="@+id/tutorial_page_10"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="vertical"
			    android:weightSum="1"
			    android:visibility="invisible" >
			   		<View
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.2"/>    
			    	<TextView
					    style="@style/TutorialFont"
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.8"
					    android:text="@string/tutorial_page_10"/>
			</LinearLayout>
		   	<LinearLayout
		   	    android:id="@+id/tutorial_page_11"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="vertical"
			    android:weightSum="1"
			    android:visibility="invisible" >
			   		<View
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.3"/>
			    	<TextView
					    style="@style/TutorialFont"
					    android:layout_width="fill_parent"
					    android:layout_height="0dp"
					    android:layout_weight="0.7"
					    android:text="@string/tutorial_page_11"/>    
			</LinearLayout>
		</RelativeLayout>
	
		<RelativeLayout
		      android:layout_width="fill_parent"
		      android:layout_height="fill_parent">
			<LinearLayout 
			    xmlns:android="http://schemas.android.com/apk/res/android"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="vertical"
			    android:weightSum="1" >
				<View
					android:layout_width="fill_parent"
					android:layout_height="0dp"
					android:layout_weight="0.65"/>
				<LinearLayout
				    android:layout_width="fill_parent"
				    android:layout_height="0dp"
				    android:layout_weight="0.35"
				    android:weightSum="1"
				    android:orientation="horizontal">
				    <ImageButton
						android:background="@null"
						android:id="@+id/exit_tutorial"
						android:src="@drawable/exit_button"
						android:layout_weight="0.2"
						android:layout_width="0dp"
						android:layout_height="fill_parent"/>
					<View android:layout_height="fill_parent" android:layout_width="0dp" android:layout_weight="0.4"/>
	   			    <ImageButton
						android:background="@null"
						android:id="@+id/goto_prev_page"
						android:src="@drawable/prev_button"
						android:layout_weight="0.2"
						android:layout_width="0dp"
						android:layout_height="fill_parent"/>
				    <ImageButton
						android:background="@null"
						android:id="@+id/goto_next_page"
						android:src="@drawable/next_button"
						android:layout_weight="0.2"
						android:layout_width="0dp"
						android:layout_height="fill_parent"/>
				</LinearLayout>     
		  	</LinearLayout>
		</RelativeLayout>
	</RelativeLayout>    
</FrameLayout>
